firmware/lib/control-table/tests/ui/table_regions_overlap.stderr
error[E0080]: evaluation panicked: Table regions overlap
  --> tests/ui/table_regions_overlap.rs:61:10
   |
61 | #[derive(Table)]
   |          ^^^^^ evaluation of `_` failed here
